@startuml

title __INTROTODESIGNPATTERN's Class Diagram__\n

  namespace com.erikriosetiawan {
    abstract class com.erikriosetiawan.Duck {
    }
  }
  

  namespace com.erikriosetiawan {
    interface com.erikriosetiawan.FlyBehavior {
    }
  }
  

  namespace com.erikriosetiawan {
    class com.erikriosetiawan.FlyNoWay {
    }
  }
  

  namespace com.erikriosetiawan {
    class com.erikriosetiawan.FlyRocketPowered {
    }
  }
  

  namespace com.erikriosetiawan {
    class com.erikriosetiawan.FlyWithWings {
    }
  }
  

  namespace com.erikriosetiawan {
    class com.erikriosetiawan.MallardDuck {
    }
  }
  

  namespace com.erikriosetiawan {
    class com.erikriosetiawan.MiniDuckSimulator {
    }
  }
  

  namespace com.erikriosetiawan {
    class com.erikriosetiawan.ModelDuck {
    }
  }
  

  namespace com.erikriosetiawan {
    class com.erikriosetiawan.MuteQuack {
    }
  }
  

  namespace com.erikriosetiawan {
    class com.erikriosetiawan.Quack {
    }
  }
  

  namespace com.erikriosetiawan {
    interface com.erikriosetiawan.QuackBehavior {
    }
  }
  

  namespace com.erikriosetiawan {
    class com.erikriosetiawan.Squeak {
    }
  }
  

  com.erikriosetiawan.Duck o-- com.erikriosetiawan.FlyBehavior : flyBehavior
  com.erikriosetiawan.Duck o-- com.erikriosetiawan.QuackBehavior : quackBehavior
  com.erikriosetiawan.FlyNoWay .up.|> com.erikriosetiawan.FlyBehavior
  com.erikriosetiawan.FlyRocketPowered .up.|> com.erikriosetiawan.FlyBehavior
  com.erikriosetiawan.FlyWithWings .up.|> com.erikriosetiawan.FlyBehavior
  com.erikriosetiawan.MallardDuck -up-|> com.erikriosetiawan.Duck
  com.erikriosetiawan.ModelDuck -up-|> com.erikriosetiawan.Duck
  com.erikriosetiawan.MuteQuack .up.|> com.erikriosetiawan.QuackBehavior
  com.erikriosetiawan.Quack .up.|> com.erikriosetiawan.QuackBehavior
  com.erikriosetiawan.Squeak .up.|> com.erikriosetiawan.QuackBehavior


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
